# cpp-lsp-api

./: .gitignore  CMakeLists.txt  README.md
include/: LSP-Glaze.h  LSP-Protocol.h  LSP.h  _StringEnum.h  _UTF8StringView.h
include/Lsp/: LSP-Glaze.h  LSP-Protocol.h  LSP.h  LanguageServer.h  Protocol.h  _LSP-Glaze.h  _StringEnum.h  _UTF8StringView.h
src/: LSP.cpp  LanguageServer.cpp
